# clinicalguard-ai

./: .gitignore  README.md  RUN_INSTRUCTIONS.md  railway.json  veris-report.html
.veris/: .dockerignore  Dockerfile.sandbox  config.yaml  veris.yaml
backend/: main.py  pyproject.toml  requirements.txt  seed_demo_data.py  test_ui.py
backend/agents/: compliance_checker.py  phi_scanner.py  review_agent.py
backend/db/: audit_log.py
backend/models/: schemas.py
backend/proxy/: interceptor.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AuditTable.jsx  FlagQueue.jsx  QueryDetail.jsx  RiskBadge.jsx  StatsBar.jsx  StatusBadge.jsx
frontend/src/lib/: utils.js
frontend_streamlit/: app.py  requirements.txt
